Fix Correct alignment of third-level submenus in right-justified navigation

--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -394,8 +394,8 @@ button.wp-block-navigation-item__content {
 		}
 		@include break-medium {
 			.wp-block-navigation__submenu-container {
-				left: auto;
-				right: 100%;
+				left: 100%;
+				right: auto;
 			}
 		}
 	}
